# cydtuner

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  gen_440hz.py  gen_sweep.py  history.json  partitions.csv  sdkconfig
components/ili9341/: CMakeLists.txt  ili9341.c  ili9341.h
components/xpt2046/: CMakeLists.txt  xpt2046.c  xpt2046.h
docs/superpowers/plans/: 2026-03-23-esp32-strobe-tuner.md  2026-03-24-display-pass-1.md  2026-03-24-pitch-test-sweep.md  2026-03-24-test-harness-plan-1.md  2026-03-24-test-harness-plan-2.md  2026-03-24-tuner-improvements.md
docs/superpowers/specs/: 2026-03-23-esp32-strobe-tuner-design.md  2026-03-24-display-pass-1-design.md  2026-03-24-pitch-test-sweep-design.md  2026-03-24-test-harness-design.md  2026-03-24-tuner-improvements-design.md
main/: CMakeLists.txt  audio.c  audio.h  calib.c  calib.h  display.c  display.h  main.c  pitch.c  pitch.h  touch.c  touch.h  wifi.c  wifi.h
patches/: display-arc.patch  first.patch
test_harness/: CMakeLists.txt  CUserstroutstarAppDataLocalTemphist.json  README.md  anim_test.ps1  hist.json  history.json  history_full.json  sdkconfig  sdkconfig.defaults  snapshot.json  sweep.ps1  sweep_report.txt  sweep_stats.js
test_harness/main/: CMakeLists.txt  httpd.c  httpd.h  main.c  test_harness.c  test_harness.h  wifi.c  wifi.h  wifi_credentials.h.example
tools/: arc_mockup.html  arc_mockup.py  claudesweeps.py  gen_sweep.py  gen_tuning_sim.py  net_audio.py  sweeps.py
